@@ -6,6 +6,10 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
 
 import com.bakdata.conquery.apiv1.forms.export_form.ExportForm;
 import com.bakdata.conquery.apiv1.query.CQElement;
@@ -13,15 +17,19 @@ import com.bakdata.conquery.apiv1.query.concept.filter.CQTable;
 import com.bakdata.conquery.apiv1.query.concept.filter.FilterValue;
 import com.bakdata.conquery.io.cps.CPSType;
 import com.bakdata.conquery.io.jackson.View;
-import com.bakdata.conquery.io.jackson.serializer.NsIdRefCollection;
-import com.bakdata.conquery.models.common.CDateSet;
 import com.bakdata.conquery.models.datasets.concepts.Concept;
 import com.bakdata.conquery.models.datasets.concepts.ConceptElement;
 import com.bakdata.conquery.models.datasets.concepts.Connector;
 import com.bakdata.conquery.models.datasets.concepts.ValidityDate;
 import com.bakdata.conquery.models.datasets.concepts.select.Select;
-import com.bakdata.conquery.models.identifiable.ids.NamespacedIdentifiable;
+import com.bakdata.conquery.models.identifiable.NamespacedIdentifiable;
+import com.bakdata.conquery.models.identifiable.ids.specific.ConceptElementId;
+import com.bakdata.conquery.models.identifiable.ids.specific.ConceptId;
+import com.bakdata.conquery.models.identifiable.ids.specific.ConceptSelectId;
+import com.bakdata.conquery.models.identifiable.ids.specific.ConnectorId;
+import com.bakdata.conquery.models.identifiable.ids.specific.ConnectorSelectId;
 import com.bakdata.conquery.models.identifiable.ids.specific.ManagedExecutionId;
+import com.bakdata.conquery.models.identifiable.ids.specific.SelectId;
 import com.bakdata.conquery.models.query.DateAggregationMode;
 import com.bakdata.conquery.models.query.NamespacedIdentifiableHolding;
 import com.bakdata.conquery.models.query.QueryExecutionContext;
@@ -34,6 +42,7 @@ import com.bakdata.conquery.models.query.queryplan.QPNode;
 import com.bakdata.conquery.models.query.queryplan.aggregators.Aggregator;
 import com.bakdata.conquery.models.query.queryplan.aggregators.specific.EventDateUnionAggregator;
 import com.bakdata.conquery.models.query.queryplan.aggregators.specific.ExistsAggregator;
+import com.bakdata.conquery.models.query.queryplan.filter.AggregationResultFilterNode;
 import com.bakdata.conquery.models.query.queryplan.filter.FilterNode;
 import com.bakdata.conquery.models.query.queryplan.specific.ConceptNode;
 import com.bakdata.conquery.models.query.queryplan.specific.OrNode;
@@ -44,9 +53,6 @@ import com.fasterxml.jackson.annotation.JsonManagedReference;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonView;
 import io.dropwizard.validation.ValidationMethod;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.NotEmpty;
-import jakarta.validation.constraints.NotNull;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.Setter;
@@ -61,13 +67,9 @@ import lombok.extern.slf4j.Slf4j;
 @EqualsAndHashCode(callSuper = true, doNotUseGetters = true)
 public class CQConcept extends CQElement implements NamespacedIdentifiableHolding, ExportForm.DefaultSelectSettable {
 
-	/**
-	 * @implNote FK: this is a schema migration problem I'm not interested fixing right now.
-	 */
 	@JsonProperty("ids")
 	@NotEmpty
-	@NsIdRefCollection
-	private List<ConceptElement<?>> elements = Collections.emptyList();
+	private List<ConceptElementId<?>> elements = Collections.emptyList();
 
 	@Valid
 	@NotEmpty
@@ -76,8 +78,7 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 	private List<CQTable> tables = Collections.emptyList();
 
 	@NotNull
-	@NsIdRefCollection
-	private List<Select> selects = new ArrayList<>();
+	private List<SelectId> selects = new ArrayList<>();
 
 	private boolean excludeFromTimeAggregation;
 
@@ -88,36 +89,40 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 	@JsonView(View.InternalCommunication.class)
 	private boolean aggregateEventDates;
 
-	public static CQConcept forSelect(Select select) {
+	public static CQConcept forSelect(SelectId selectId) {
 		final CQConcept cqConcept = new CQConcept();
-		cqConcept.setElements(List.of(select.getHolder().findConcept()));
 
-		if (select.getHolder() instanceof Connector) {
-			final CQTable table = new CQTable();
-			cqConcept.setTables(List.of(table));
+		cqConcept.setElements(List.of(selectId.findConcept()));
 
-			table.setConnector(((Connector) select.getHolder()));
+		switch (selectId) {
+			case ConceptSelectId conceptSelectId -> {
+				cqConcept.setTables(conceptSelectId.getConcept().resolve()
+												   .getConnectors().stream()
+												   .map(conn -> {
+													   final CQTable table = new CQTable();
+													   table.setConnector(conn.getId());
+													   return table;
+												   }).toList());
 
-			table.setSelects(List.of(select));
-			table.setConcept(cqConcept);
-		}
-		else {
-			cqConcept.setTables(((Concept<?>) select.getHolder())
-										.getConnectors().stream()
-										.map(conn -> {
-											final CQTable table = new CQTable();
-											table.setConnector(conn);
-											return table;
-										}).toList());
+				cqConcept.setSelects(List.of(conceptSelectId));
+			}
+			case ConnectorSelectId connectorSelectId -> {
+				final CQTable table = new CQTable();
+				cqConcept.setTables(List.of(table));
 
-			cqConcept.setSelects(List.of(select));
+				table.setConnector(connectorSelectId.getConnector());
+
+				table.setSelects(List.of(connectorSelectId));
+				table.setConcept(cqConcept);
+			}
 		}
 
 		return cqConcept;
 	}
 
-	public static CQConcept forConnector(Connector source) {
+	public static CQConcept forConnector(ConnectorId source) {
 		final CQConcept cqConcept = new CQConcept();
+
 		cqConcept.setElements(List.of(source.getConcept()));
 		final CQTable cqTable = new CQTable();
 		cqTable.setConcept(cqConcept);
@@ -133,7 +138,7 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 			return null;
 		}
 
-		if (elements.size() == 1 && elements.get(0).equals(getConcept())) {
+		if (elements.size() == 1 && elements.get(0).equals(getConceptId())) {
 			return getConcept().getLabel();
 		}
 
@@ -142,11 +147,13 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 		builder.append(getConcept().getLabel());
 		builder.append(" ");
 
-		for (ConceptElement<?> id : elements) {
-			if (id.equals(getConcept())) {
+		for (ConceptElementId<?> id : elements) {
+			if (id.equals(getConceptId())) {
 				continue;
 			}
-			builder.append(id.getLabel()).append("+");
+
+			ConceptElement<?> conceptElement = id.resolve();
+			builder.append(conceptElement.getLabel()).append("+");
 		}
 
 		builder.deleteCharAt(builder.length() - 1);
@@ -155,87 +162,75 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 	}
 
 	@JsonIgnore
+	public ConceptId getConceptId() {
+		return elements.get(0).findConcept();
+	}
+
+	@JsonIgnore
 	public Concept<?> getConcept() {
-		return elements.get(0).getConcept();
+		return getConceptId().resolve();
 	}
 
-	@JsonIgnore
-	@ValidationMethod(message = "Not all Selects belong to the Concept.")
-	public boolean isAllSelectsForConcept() {
-		final Concept<?> concept = getConcept();
-
-		if (!getSelects().stream().map(Select::getHolder).allMatch(concept::equals)) {
-			log.error("Not all selects belong to Concept[{}]", concept);
-			return false;
-		}
-
-		return true;
-	}
-
-	@JsonIgnore
-	@ValidationMethod(message = "Not all elements belong to the same Concept.")
-	public boolean isAllElementsForConcept() {
-		final Concept<?> concept = getConcept();
-
-		if (!getElements().stream().map(ConceptElement::getConcept).allMatch(concept::equals)) {
-			log.error("Not all elements belong to Concept[{}]", concept);
-			return false;
-		}
-
-		return true;
+	@Override
+	public void resolve(QueryResolveContext context) {
+		aggregateEventDates = !(excludeFromTimeAggregation || DateAggregationMode.NONE.equals(context.getDateAggregationMode()));
+		tables.forEach(t -> t.resolve(context));
 	}
 
 	@Override
 	public QPNode createQueryPlan(QueryPlanContext context, ConceptQueryPlan plan) {
 
-		final List<Aggregator<?>> conceptAggregators = createAggregators(plan, selects);
+		final List<Aggregator<?>> conceptAggregators = createAggregators(plan, selects, context);
 
 		final List<QPNode> tableNodes = new ArrayList<>();
 		for (CQTable table : tables) {
 
-			final List<FilterNode<?>> filters = table.getFilters().stream()
-													 .map(FilterValue::createNode)
-													 .collect(Collectors.toList());
+			final List<FilterNode<?>> filters = createFilters(table, context.isDisableAggregationFilters());
 
 			//add filter to children
-			final List<Aggregator<?>> aggregators = new ArrayList<>();
 
-			aggregators.addAll(conceptAggregators);
+			final List<Aggregator<?>> aggregators = new ArrayList<>(conceptAggregators);
 
-			final List<Aggregator<?>> connectorAggregators = createAggregators(plan, table.getSelects());
+			final List<Aggregator<?>> connectorAggregators = createAggregators(plan, table.getSelects(), context);
 
-			// Exists aggregators hold a reference to their parent FiltersNode so they need to be treated separately.
+			// Exists aggregators hold a reference to their parent FiltersNode, so they need to be treated separately.
 			// They also don't need aggregation as they simply imitate their reference.
 			final List<ExistsAggregator> existsAggregators =
 					connectorAggregators.stream()
 										.filter(ExistsAggregator.class::isInstance)
 										.map(ExistsAggregator.class::cast)
-										.collect(Collectors.toList());
+										.toList();
 
 			aggregators.addAll(connectorAggregators);
 
 			aggregators.removeIf(ExistsAggregator.class::isInstance);
 
 
-			final List<Aggregator<CDateSet>> eventDateUnionAggregators =
-					aggregateEventDates ? List.of(new EventDateUnionAggregator(Set.of(table.getConnector().getTable())))
-										: Collections.emptyList();
+			final EventDateUnionAggregator eventDateUnionAggregator =
+					aggregateEventDates ? new EventDateUnionAggregator()
+										: null;
 
-			aggregators.addAll(eventDateUnionAggregators);
+			if (aggregateEventDates) {
+				aggregators.add(eventDateUnionAggregator);
+			}
 
 			final QPNode
 					conceptSpecificNode =
-					getConcept().createConceptQuery(context, filters, aggregators, eventDateUnionAggregators, selectValidityDate(table));
+					getConcept().createConceptQuery(context, filters, aggregators, eventDateUnionAggregator, selectValidityDate(table));
+
+			if (eventDateUnionAggregator != null) {
+				eventDateUnionAggregator.setOwner(conceptSpecificNode);
+			}
 
 			// Link up the ExistsAggregators to the node
 			existsAggregators.forEach(agg -> agg.setReference(conceptSpecificNode));
 
 			// Select if matching secondaryId available
-			final boolean hasSelectedSecondaryId = table.hasSelectedSecondaryId(context.getSelectedSecondaryId());
+			final boolean hasSelectedSecondaryId = context.getSelectedSecondaryId() != null && table.hasSelectedSecondaryId(context.getSelectedSecondaryId().getId());
 
 			final ConceptNode node = new ConceptNode(
 					conceptSpecificNode,
-					elements,
+					elements.stream().<ConceptElement<?>>map(ConceptElementId::resolve).toList(),
 					table,
 					// if the node is excluded, don't pass it into the Node.
 					!excludeFromSecondaryId && hasSelectedSecondaryId ? context.getSelectedSecondaryId() : null
@@ -255,46 +250,69 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 		return outNode;
 	}
 
-	@Override
-	public void collectRequiredQueries(Set<ManagedExecutionId> requiredQueries) {
-
-	}
-
 	/**
 	 * Generates Aggregators from Selects. These are collected and also appended to the list of aggregators in the
 	 * query plan that contribute to columns the result.
 	 */
-	private static List<Aggregator<?>> createAggregators(ConceptQueryPlan plan, List<Select> selects) {
+	private static List<Aggregator<?>> createAggregators(ConceptQueryPlan plan, List<? extends SelectId> selects, QueryPlanContext context) {
+		if (context.isDisableAggregators()) {
+			return Collections.emptyList();
+		}
+
 		return selects.stream()
+					  .map(SelectId::resolve)
 					  .map(Select::createAggregator)
 					  .peek(plan::registerAggregator)
 					  .collect(Collectors.toList());
 	}
 
+	private static List<FilterNode<?>> createFilters(CQTable table, boolean disableAggregationFilters) {
+		Stream<? extends FilterNode<?>> filterNodes = table.getFilters().stream()
+														   .map(FilterValue::createNode);
+
+		if (disableAggregationFilters) {
+			return filterNodes
+					.filter(filterNode -> !(filterNode instanceof AggregationResultFilterNode))
+					.collect(Collectors.toList());
+		}
+
+
+		return filterNodes
+				.collect(Collectors.toList());
+	}
+
 	private ValidityDate selectValidityDate(CQTable table) {
 		if (table.getDateColumn() != null) {
-			return table.getDateColumn().getValue();
+			return table.getDateColumn().getValue().resolve();
 		}
 
 		//else use this first defined validity date column
-		if (!table.getConnector().getValidityDates().isEmpty()) {
-			return table.getConnector().getValidityDates().get(0);
+		final Connector connector = table.getConnector().resolve();
+		if (!connector.getValidityDates().isEmpty()) {
+			return connector.getValidityDates().get(0);
 		}
 
 		return null;
 	}
 
 	@Override
+	public void collectRequiredQueries(Set<ManagedExecutionId> requiredQueries) {
+
+	}
+
+	@Override
 	public List<ResultInfo> getResultInfos() {
 		final List<ResultInfo> resultInfos = new ArrayList<>();
 
-		for (Select select : selects) {
-			resultInfos.add(select.getResultInfo(this));
+		for (SelectId select : selects) {
+			Select resolved = select.resolve();
+			resultInfos.add(resolved.getResultInfo(this));
 		}
 
 		for (CQTable table : tables) {
-			for (Select sel : table.getSelects()) {
-				resultInfos.add(sel.getResultInfo(this));
+			for (SelectId sel : table.getSelects()) {
+				Select resolved = sel.resolve();
+				resultInfos.add(resolved.getResultInfo(this));
 			}
 		}
 
@@ -302,20 +320,59 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 	}
 
 	@Override
-	public void collectNamespacedObjects(Set<NamespacedIdentifiable<?>> identifiables) {
-		identifiables.addAll(elements);
-		identifiables.addAll(selects);
-		tables.forEach(table -> identifiables.add(table.getConnector()));
+	public RequiredEntities collectRequiredEntities(QueryExecutionContext context) {
+		final Set<ConnectorId> connectors = getTables().stream().map(CQTable::getConnector).collect(Collectors.toSet());
+
+		return new RequiredEntities(context.getBucketManager()
+										   .getEntitiesWithConcepts(getElements(),
+																	connectors, context.getDateRestriction()
+										   ));
+	}
+
+
+	@JsonIgnore
+	@ValidationMethod(message = "Not all Selects belong to the Concept.")
+	public boolean isAllSelectsForConcept() {
+		final ConceptId concept = getConceptId();
+
+		if (!getSelects().stream().map(SelectId::findConcept).allMatch(concept::equals)) {
+			log.error("Not all selects belong to Concept[{}]", concept);
+			return false;
+		}
+
+		return true;
+	}
+
+	@JsonIgnore
+	@ValidationMethod(message = "Not all elements belong to the same Concept.")
+	public boolean isAllElementsForConcept() {
+
+		final ConceptId concept = getConceptId();
+
+		if (!getElements().stream().map(ConceptElementId::findConcept).allMatch(concept::equals)) {
+			log.error("Not all elements belong to Concept[{}]", concept);
+			return false;
+		}
+
+		return true;
 	}
 
 	@Override
-	public void resolve(QueryResolveContext context) {
-		aggregateEventDates = !(excludeFromTimeAggregation || DateAggregationMode.NONE.equals(context.getDateAggregationMode()));
-		tables.forEach(t -> t.resolve(context));
+	public void collectNamespacedObjects(Set<? super NamespacedIdentifiable<?>> identifiables) {
+		for (ConceptElementId<?> element : elements) {
+			identifiables.add(element.resolve());
+		}
+
+		for (SelectId select : selects) {
+			identifiables.add(select.resolve());
+		}
+		for (CQTable table : tables) {
+			identifiables.add(table.getConnector().resolve());
+		}
 	}
 
 	@Override
-	public void setDefaultExists() {
+	public void setDefaultSelects() {
 		final boolean allTablesEmpty = getTables().stream()
 												  .map(CQTable::getSelects)
 												  .allMatch(List::isEmpty);
@@ -325,22 +382,20 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 			return;
 		}
 
-		final List<Select> cSelects = new ArrayList<>(getSelects());
+		final List<SelectId> cSelects = new ArrayList<>(getSelects());
 		cSelects.addAll(getConcept().getDefaultSelects());
 
 		setSelects(cSelects);
 
 		for (CQTable t : getTables()) {
-			final List<Select> conSelects = new ArrayList<>(t.getSelects());
-			conSelects.addAll(t.getConnector().getDefaultSelects());
+			final List<ConnectorSelectId> conSelects = new ArrayList<>(t.getSelects());
+			conSelects.addAll(t.getConnector().resolve()
+							   .getDefaultSelects().stream()
+							   .map(Select::getId)
+							   .map(ConnectorSelectId.class::cast)
+							   .toList());
+
 			t.setSelects(conSelects);
 		}
-	}
-
-	@Override
-	public RequiredEntities collectRequiredEntities(QueryExecutionContext context) {
-		final Set<Connector> connectors = getTables().stream().map(CQTable::getConnector).collect(Collectors.toSet());
-
-		return new RequiredEntities(context.getBucketManager().getEntitiesWithConcepts(getElements(), connectors, context.getDateRestriction()));
 	}
 }
