@@ -1,101 +1,66 @@
 package com.bakdata.conquery.sql.conversion.query;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import com.bakdata.conquery.apiv1.query.Query;
 import com.bakdata.conquery.apiv1.query.TableExportQuery;
 import com.bakdata.conquery.apiv1.query.concept.filter.CQTable;
 import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
 import com.bakdata.conquery.models.common.daterange.CDateRange;
 import com.bakdata.conquery.models.datasets.Column;
+import com.bakdata.conquery.models.identifiable.ids.specific.ColumnId;
 import com.bakdata.conquery.sql.conversion.NodeConverter;
 import com.bakdata.conquery.sql.conversion.SharedAliases;
 import com.bakdata.conquery.sql.conversion.cqelement.ConversionContext;
 import com.bakdata.conquery.sql.conversion.dialect.SqlFunctionProvider;
 import com.bakdata.conquery.sql.conversion.forms.FormCteStep;
-import com.bakdata.conquery.sql.conversion.model.ColumnDateRange;
-import com.bakdata.conquery.sql.conversion.model.QueryStep;
-import com.bakdata.conquery.sql.conversion.model.QueryStepTransformer;
-import com.bakdata.conquery.sql.conversion.model.Selects;
-import com.bakdata.conquery.sql.conversion.model.SqlIdColumns;
-import com.bakdata.conquery.sql.conversion.model.SqlQuery;
+import com.bakdata.conquery.sql.conversion.model.*;
 import com.bakdata.conquery.sql.conversion.model.select.FieldWrapper;
 import com.bakdata.conquery.util.TablePrimaryColumnUtil;
 import com.google.common.base.Preconditions;
-import com.google.common.base.Predicate;
 import lombok.RequiredArgsConstructor;
-import org.jooq.Condition;
-import org.jooq.Field;
+import org.jooq.*;
 import org.jooq.Record;
-import org.jooq.Select;
-import org.jooq.Table;
-import org.jooq.impl.DSL;
+
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static org.jooq.impl.DSL.*;
 
 @RequiredArgsConstructor
 public class TableExportQueryConverter implements NodeConverter<TableExportQuery> {
 
+	/**
+	 * Validity date is part of positions, but not when converting to SQL because it might have multiple columns and not just one.
+	 * Thus, we need to apply an offset to the positions.
+	 */
+	private static final int POSITION_OFFSET = 1;
+
 	private final QueryStepTransformer queryStepTransformer;
-
-	@Override
-	public Class<? extends TableExportQuery> getConversionClass() {
-		return TableExportQuery.class;
-	}
-
-	@Override
-	public ConversionContext convert(TableExportQuery tableExportQuery, ConversionContext context) {
-
-		QueryStep convertedPrerequisite = convertPrerequisite(tableExportQuery, context);
-		Map<Column, Integer> positions = tableExportQuery.getPositions();
-		CDateRange dateRestriction = CDateRange.of(tableExportQuery.getDateRange());
-
-		List<QueryStep> convertedTables = tableExportQuery.getTables().stream()
-														  .flatMap(concept -> concept.getTables().stream().map(table -> convertTable(
-																  table,
-																  concept,
-																  dateRestriction,
-																  convertedPrerequisite,
-																  positions,
-																  context
-														  )))
-														  .toList();
-
-		QueryStep unionedTables = QueryStep.createUnionAllStep(
-				convertedTables,
-				null, // no CTE name required as this step will be the final select
-				List.of(convertedPrerequisite)
-		);
-		Select<Record> selectQuery = queryStepTransformer.toSelectQuery(unionedTables);
-
-		return context.withFinalQuery(new SqlQuery(selectQuery, tableExportQuery.getResultInfos()));
-	}
 
 	/**
 	 * Converts the {@link Query} of the given {@link TableExportQuery} and creates another {@link QueryStep} on top which extracts only the primary id.
 	 */
 	private static QueryStep convertPrerequisite(TableExportQuery exportQuery, ConversionContext context) {
 
-		ConversionContext withConvertedPrerequisite = context.getNodeConversions().convert(exportQuery.getQuery(), context);
+		final ConversionContext withConvertedPrerequisite = context.getNodeConversions().convert(exportQuery.getQuery(), context);
 		Preconditions.checkArgument(withConvertedPrerequisite.getQuerySteps().size() == 1, "Base query conversion should produce exactly 1 QueryStep");
-		QueryStep convertedPrerequisite = withConvertedPrerequisite.getLastConvertedStep();
+		final QueryStep convertedPrerequisite = withConvertedPrerequisite.getLastConvertedStep();
 
-		Selects prerequisiteSelects = convertedPrerequisite.getQualifiedSelects();
-		Selects selects = Selects.builder()
-								 .ids(new SqlIdColumns(prerequisiteSelects.getIds().getPrimaryColumn()))
-								 .build();
+		final Selects prerequisiteSelects = convertedPrerequisite.getQualifiedSelects();
+		final Selects selects = Selects.builder()
+				.ids(new SqlIdColumns(prerequisiteSelects.getIds().getPrimaryColumn()))
+				.build();
 
 		return QueryStep.builder()
-						.cteName(FormCteStep.EXTRACT_IDS.getSuffix())
-						.selects(selects)
-						.fromTable(QueryStep.toTableLike(convertedPrerequisite.getCteName()))
-						.groupBy(selects.getIds().toFields()) // group by primary column to ensure max. 1 entry per subject
-						.predecessors(List.of(convertedPrerequisite))
-						.build();
+				.cteName(FormCteStep.EXTRACT_IDS.getSuffix())
+				.selects(selects)
+				.fromTable(QueryStep.toTableLike(convertedPrerequisite.getCteName()))
+				.groupBy(selects.getIds().toFields()) // group by primary column to ensure max. 1 entry per subject
+				.predecessors(List.of(convertedPrerequisite))
+				.build();
 	}
 
 	/**
@@ -107,101 +72,145 @@ public class TableExportQueryConverter implements NodeConverter<TableExportQuery
 			CQConcept concept,
 			CDateRange dateRestriction,
 			QueryStep convertedPrerequisite,
-			Map<Column, Integer> positions,
+			Map<ColumnId, Integer> positions,
 			ConversionContext context
 	) {
-		Field<Object> primaryColumn = TablePrimaryColumnUtil.findPrimaryColumn(cqTable.getConnector().getTable(), context.getConfig());
-		SqlIdColumns ids = new SqlIdColumns(primaryColumn);
-		String conceptConnectorName = context.getNameGenerator().conceptConnectorName(concept, cqTable.getConnector());
-		Optional<ColumnDateRange> validityDate = convertTablesValidityDate(cqTable, conceptConnectorName, dateRestriction, context);
+		final Field<String> primaryColumn = TablePrimaryColumnUtil.findPrimaryColumn(cqTable.getConnector().resolve().getResolvedTable(),
+				context.getDefaultPrimaryColumn()
+		);
+		final SqlIdColumns ids = new SqlIdColumns(primaryColumn);
+		final String conceptConnectorName =
+				context.getNameGenerator().conceptConnectorName(concept, cqTable.getConnector().resolve(), context.getSqlPrintSettings().getLocale());
+		final Optional<ColumnDateRange> validityDate = convertTablesValidityDate(cqTable, conceptConnectorName, context);
 
-		List<Field<?>> exportColumns = new ArrayList<>();
-		exportColumns.add(createSourceInfoSelect(cqTable));
+		final List<FieldWrapper<?>> exportColumns = initializeFields(cqTable, positions);
 
-		positions.entrySet().stream()
-				 .sorted(Comparator.comparingInt(Map.Entry::getValue))
-				 .map(entry -> createColumnSelect(cqTable, entry))
-				 .forEach(exportColumns::add);
+		final Selects selects = Selects.builder()
+				.ids(ids)
+				.validityDate(validityDate)
+				.sqlSelects(exportColumns)
+				.build();
 
-		Selects selects = Selects.builder()
-								 .ids(ids)
-								 .validityDate(validityDate)
-								 .sqlSelects(exportColumns.stream().map(FieldWrapper::new).collect(Collectors.toList()))
-								 .build();
-
-		List<Condition> filters = cqTable.getFilters().stream().map(filterValue -> filterValue.convertForTableExport(ids, context)).toList();
-		Table<Record> joinedTable = joinConnectorTableWithPrerequisite(cqTable, ids, convertedPrerequisite, context);
+		final List<Condition> filters = cqTable.getFilters().stream().map(filterValue -> filterValue.convertForTableExport(ids, context)).toList();
+		final Table<Record> joinedTable = joinConnectorTableWithPrerequisite(cqTable, ids, convertedPrerequisite, dateRestriction, context);
 
 		return QueryStep.builder()
-						.cteName(conceptConnectorName)
-						.selects(selects)
-						.fromTable(joinedTable)
-						.conditions(filters)
-						.build();
+				.cteName(conceptConnectorName)
+				.selects(selects)
+				.fromTable(joinedTable)
+				.conditions(filters)
+				.forTableExport(true)
+				.build();
 	}
 
-	private static Optional<ColumnDateRange> convertTablesValidityDate(CQTable table, String alias, CDateRange dateRestriction, ConversionContext context) {
+	private static Optional<ColumnDateRange> convertTablesValidityDate(CQTable table, String alias, ConversionContext context) {
+
+		final SqlFunctionProvider functionProvider = context.getFunctionProvider();
+
 		if (table.findValidityDate() == null) {
-			return Optional.of(ColumnDateRange.empty());
+			return Optional.of(functionProvider.emptyColumnDateRange());
 		}
-		SqlFunctionProvider functionProvider = context.getSqlDialect().getFunctionProvider();
-		ColumnDateRange validityDate = functionProvider.forValidityDate(table.findValidityDate(), dateRestriction);
-		// when exporting tables, we want the validity date as a single-column daterange string expression straightaway
-		Field<String> asStringExpression = functionProvider.encloseInCurlyBraces(functionProvider.daterangeStringExpression(validityDate));
-		return Optional.of(ColumnDateRange.of(asStringExpression).asValidityDateRange(alias));
+
+		final ColumnDateRange validityDateField = functionProvider.forValidityDate(table.findValidityDate());
+
+		return Optional.of(validityDateField);
 	}
 
-	private static Field<String> createSourceInfoSelect(CQTable cqTable) {
-		String tableName = cqTable.getConnector().getTable().getName();
-		return DSL.val(tableName).as(SharedAliases.SOURCE.getAlias());
-	}
+	private static List<FieldWrapper<?>> initializeFields(CQTable cqTable, Map<ColumnId, Integer> positions) {
 
-	private static Field<?> createColumnSelect(CQTable table, Map.Entry<Column, Integer> entry) {
+		final Field<?>[] exportColumns = createPlaceholders(positions);
 
-		Column column = entry.getKey();
-		Integer columnPosition = entry.getValue();
-		String columnName = "%s-%s".formatted(column.getName(), columnPosition);
+		exportColumns[0] = createSourceInfoSelect(cqTable);
 
-		if (!isColumnOfTable(column, table)) {
-			return DSL.inline(null, Object.class).as(columnName);
+		for (Column column : cqTable.getConnector().resolve().getResolvedTable().getColumns()) {
+			// e.g. date column(s) are handled separately and not part of positions
+			if (!positions.containsKey(column.getId())) {
+				continue;
+			}
+			final int position = positions.get(column.getId()) - POSITION_OFFSET;
+			exportColumns[position] = createColumnSelect(column, position);
 		}
-		return DSL.field(DSL.name(column.getTable().getName(), column.getName()))
-				  .as(columnName);
-	}
 
-	private static boolean isColumnOfTable(Column column, CQTable table) {
-		return columnIsConnectorColumn(column, table)
-			   || columnIsSecondaryIdOfConnectorTable(column, table)
-			   || columnIsConnectorTableColumn(column, table);
-	}
-
-	private static boolean columnIsConnectorTableColumn(Column column, CQTable table) {
-		return matchesTableColumnOn(table, tableColumn -> tableColumn == column);
-	}
-
-	private static boolean columnIsSecondaryIdOfConnectorTable(Column column, CQTable table) {
-		return column.getSecondaryId() != null && matchesTableColumnOn(table, tableColumn -> tableColumn.getSecondaryId() == column.getSecondaryId());
-	}
-
-	private static boolean matchesTableColumnOn(CQTable table, Predicate<Column> condition) {
-		return Arrays.stream(table.getConnector().getTable().getColumns()).anyMatch(condition);
-	}
-
-	private static boolean columnIsConnectorColumn(Column column, CQTable table) {
-		return table.getConnector().getColumn() != null && table.getConnector().getColumn() == column;
+		return Arrays.stream(exportColumns).map(FieldWrapper::new).collect(Collectors.toList());
 	}
 
 	private static Table<Record> joinConnectorTableWithPrerequisite(
 			CQTable cqTable,
 			SqlIdColumns ids,
 			QueryStep convertedPrerequisite,
+			CDateRange dateRestriction,
 			ConversionContext context
 	) {
-		SqlFunctionProvider functionProvider = context.getSqlDialect().getFunctionProvider();
-		Table<Record> connectorTable = DSL.table(DSL.name(cqTable.getConnector().getTable().getName()));
-		Table<Record> convertedPrerequisiteTable = DSL.table(DSL.name(convertedPrerequisite.getCteName()));
-		List<Condition> joinOnIds = ids.join(convertedPrerequisite.getQualifiedSelects().getIds());
-		return functionProvider.innerJoin(connectorTable, convertedPrerequisiteTable, joinOnIds);
+		final SqlFunctionProvider functionProvider = context.getFunctionProvider();
+		final Table<Record> connectorTable = table(name(cqTable.getConnector().resolve().resolveTableId().getTable()));
+		final Table<Record> convertedPrerequisiteTable = table(name(convertedPrerequisite.getCteName()));
+
+		final ColumnDateRange validityDate = functionProvider.forValidityDate(cqTable.findValidityDate());
+		final List<Condition> joinConditions = Stream.concat(
+				ids.join(convertedPrerequisite.getQualifiedSelects().getIds()).stream(),
+				Stream.of(functionProvider.dateRestriction(functionProvider.forCDateRange(dateRestriction), validityDate))
+		).toList();
+
+		return functionProvider.innerJoin(connectorTable, convertedPrerequisiteTable, joinConditions);
+	}
+
+	private static Field<?>[] createPlaceholders(Map<ColumnId, Integer> positions) {
+
+		final int size = TableExportQuery.calculateWidth(positions) - POSITION_OFFSET;
+		final Field<?>[] exportColumns = new Field[size];
+
+		// if columns have the same computed position, they can share a common name because they will be unioned over multiple tables anyway
+		for (int index = 0; index < exportColumns.length; index++) {
+			final Field<?> columnSelect = inline(null, Object.class).as("null-%d".formatted(index));
+			exportColumns[index] = columnSelect;
+		}
+
+		return exportColumns;
+	}
+
+	private static Field<String> createSourceInfoSelect(CQTable cqTable) {
+		final String tableName = cqTable.getConnector().resolve().resolveTableId().getTable();
+		return inline(tableName).as(SharedAliases.SOURCE.getAlias());
+	}
+
+	private static Field<?> createColumnSelect(Column column, int position) {
+		final String columnName = "%s-%s".formatted(column.getName(), position);
+		return field(name(column.getTable().getName(), column.getName()))
+				.as(columnName);
+	}
+
+	@Override
+	public Class<? extends TableExportQuery> getConversionClass() {
+		return TableExportQuery.class;
+	}
+
+	@Override
+	public ConversionContext convert(TableExportQuery tableExportQuery, ConversionContext context) {
+
+		final QueryStep convertedPrerequisite = convertPrerequisite(tableExportQuery, context);
+		final Map<ColumnId, Integer> positions = tableExportQuery.getPositions();
+		final CDateRange dateRestriction = CDateRange.of(tableExportQuery.getDateRange());
+
+		final List<QueryStep> convertedTables = tableExportQuery.getConcepts().stream()
+				.flatMap(concept -> concept.getTables().stream().map(table -> convertTable(
+						table,
+						concept,
+						dateRestriction,
+						convertedPrerequisite,
+						positions,
+						context
+				)))
+				.toList();
+
+		final QueryStep unionedTables = QueryStep.createUnionAllStep(
+				convertedTables,
+				null, // no CTE name required as this step will be the final select
+				List.of(convertedPrerequisite),
+				context.isNegation(), context.getFunctionProvider()
+		);
+		final Select<Record> selectQuery = queryStepTransformer.toSelectQuery(unionedTables, context.getFunctionProvider());
+
+		return context.withFinalQuery(new SqlQuery(selectQuery, tableExportQuery.getResultInfos()));
 	}
 
 }
